Fixes CSS/JS for bash prompt styling to accept multi lines with leading whitespaces

--- a/doc/assets/deepdive.css
+++ b/doc/assets/deepdive.css
@@ -159,7 +159,7 @@ todo::before {
 
 /* adds a dollar sign to make bash code blocks look like shell prompts */
 /* need help from JS to activate this only for single line code blocks */
-code.language-bash:not(.multi-line)::before {
+code.language-bash:not(.multi-commands)::before {
     content: "$ ";
     opacity: 0.5;
 }
